Plugin improvement